--- a/動詞十式單字衍生器.md
+++ b/動詞十式單字衍生器.md
@@ -6,8 +6,8 @@ you mainly use the الجذر to derive and generate existing arabic vocabularie
 
 using the root(الجذر) س-ل-م as an example: 
 
-INPUT: /start
-OUTPUT: 
+**INPUT:** /start
+**OUTPUT:** 
 以下是 **س-ل-م**（S-L-M）這個詞根在 **十式動詞** 中的衍生形式。
 
 ---
@@ -54,8 +54,8 @@ The user can also request for test that included the Contents according to past 
 
 for example:
 
-INPUT: /test
-OOUTPUT: 
+**INPUT:** /test
+**OUTPUT:** 
 請根據給定的詞根，填寫正確的變化形式與中文含義。
 
 س-ل-م
