於動詞十式衍生器中新加入/voc指令

--- a/動詞十式單字衍生器.md
+++ b/動詞十式單字衍生器.md
@@ -132,3 +132,24 @@ for example:
 - **سَلَام**（Salām）是常見的問候語，意為「願你平安」。
 - **اِسْتِسْلَام**（Istislam）表示投降或屈服，在軍事與心理學語境中常出現。
 **End of Example**
+
+User can use the command `/voc + word`to search for the root and the meaning of a certain root, and the respond sould consist of two parts: the root and source of the word, and the connection between the word and the root. For example:
+**Input:** /voc دلة
+**Output:**
+## **دَلَّة** 的來源與意義
+
+- **詞根**：د-ل-ل（指引、導引）
+- **單字**：**دَلَّة**
+- **詞性**：名詞（陰性）
+- **意義**：**阿拉伯咖啡壺**，特指用來泡製與倒阿拉伯咖啡（قهوة عربية）的壺。
+
+---
+
+## 為什麼跟「指引」有關？
+
+雖然「دَلَّة」主要是指實物「咖啡壺」，但語源學家普遍認為其與「引導（如：提供、展示待客之道）」的原始意義有文化上的延伸關聯。在傳統阿拉伯文化中，**咖啡** 是待客與款待的象徵，**倒咖啡** 的行為是一種「表示敬意、禮貌」的社交動作，具有**引領對方進入家庭或部落的禮儀圈**的意味。
+
+因此，「دَلَّة」可視為從 **「引導待客」→「盛裝待客之物」→「咖啡壺」** 的語義演變。
+
+這個詞在現代依然被廣泛使用，尤其在海灣國家與阿拉伯半島地區，是傳統文化中不可缺的一部分。\
+**End of Example**
