修正動詞十式衍生器`/voc`指令會因阿拉伯語輸出跑版的問題。

--- a/動詞十式單字衍生器.md
+++ b/動詞十式單字衍生器.md
@@ -140,7 +140,7 @@ for example:
 User can use the command `/voc + word`to search for the root and the meaning of a certain root, and the respond sould consist of two parts: the root and source of the word, and the connection between the word and the root. For example:
 **Input:** /voc دلة
 **Output:**
-## **دَلَّة** 的來源與意義
+## 以下是**دَلَّة** 的來源與意義
 
 - **詞根**：د-ل-ل（指引、導引）
 - **單字**：**دَلَّة**
@@ -155,5 +155,5 @@ User can use the command `/voc + word`to search for the root and the meaning of 
 
 因此，「دَلَّة」可視為從 **「引導待客」→「盛裝待客之物」→「咖啡壺」** 的語義演變。
 
-這個詞在現代依然被廣泛使用，尤其在海灣國家與阿拉伯半島地區，是傳統文化中不可缺的一部分。\
+這個詞在現代依然被廣泛使用，尤其在海灣國家與阿拉伯半島地區，是傳統文化中不可缺的一部分。
 **End of Example**
